--- a/app/src/main/res/layout/activity_shipping2.xml
+++ b/app/src/main/res/layout/activity_shipping2.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.Shipping2">
+    tools:context=".ui.ShippingActivity">
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -26,49 +26,61 @@
         app:layout_constraintStart_toEndOf="@+id/rv_payment_methods"
         app:layout_constraintTop_toTopOf="@+id/rv_payment_methods" />
 
-    <EditText
-        android:id="@+id/et_price"
-        android:layout_width="119dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="52dp"
-        android:ems="10"
-        android:inputType="numberDecimal"
-        app:layout_constraintEnd_toEndOf="@+id/rv_shipping_companies"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/rv_shipping_companies"
-        app:layout_constraintTop_toBottomOf="@+id/rv_shipping_companies" />
-
-    <EditText
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/et_weight"
-        android:layout_width="116dp"
-        android:layout_height="37dp"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:inputType="numberDecimal"
+        style="?attr/textInputFilledStyle"
+        android:layout_width="152dp"
+        android:layout_height="87dp"
+        android:layout_marginTop="56dp"
+        android:hint="weight (KG)"
+        app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="@+id/et_price"
-        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/et_price"
-        app:layout_constraintTop_toBottomOf="@+id/et_price" />
+        app:layout_constraintTop_toBottomOf="@+id/et_price">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:inputType="numberDecimal"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/et_price"
+        style="?attr/textInputFilledStyle"
+        android:layout_width="147dp"
+        android:layout_height="83dp"
+        android:hint="price ($)"
+        app:errorEnabled="true"
+        app:layout_constraintStart_toStartOf="@+id/rv_shipping_companies"
+        app:layout_constraintTop_toTopOf="@+id/rv_discount">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:inputType="numberDecimal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_discount"
         android:layout_width="114dp"
         android:layout_height="190dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/et_weight"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/et_weight"
-        app:layout_constraintTop_toBottomOf="@+id/et_weight" />
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="@+id/rv_payment_methods"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/rv_payment_methods"
+        app:layout_constraintTop_toBottomOf="@+id/rv_payment_methods" />
 
     <Button
         android:id="@+id/bt_calculate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="44dp"
+        android:layout_marginBottom="104dp"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintHorizontal_bias="0.467"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
