--- a/app/src/main/res/drawable/dot_selected.xml
+++ b/app/src/main/res/drawable/dot_selected.xml
@@ -1,5 +1,23 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <size android:width="12dp" android:height="12dp"/>
-    <solid android:color="@color/primary_green"/>
-</shape>
+<layer-list>
+    <item>
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="ring"
+            android:innerRadius="8dp"
+            android:thickness="2dp"
+            android:useLevel="false"
+            >
+            <solid android:color="@color/indicator_active"/>
+        </shape>
+
+    </item>
+    <item>
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="ring"
+            android:innerRadius="0dp"
+            android:thickness="4dp"
+            android:useLevel="false"
+            >
+            <solid android:color="@color/indicator_active"/>
+        </shape>
+    </item>
+</layer-list>
