--- a/app/src/main/res/drawable/dot_unselected.xml
+++ b/app/src/main/res/drawable/dot_unselected.xml
@@ -1,5 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <size android:width="12dp" android:height="12dp"/>
-    <solid android:color="@color/primary_green_light"/>
+    android:shape="ring"
+    android:innerRadius="0dp"
+    android:thickness="8dp"
+    android:useLevel="false"
+    >
+    <solid android:color="@color/text_color"/>
 </shape>
