--- a/app/src/main/res/layout/fragment_view_pager.xml
+++ b/app/src/main/res/layout/fragment_view_pager.xml
@@ -8,29 +8,44 @@
 
 
     <com.google.android.material.tabs.TabLayout
+        android:elevation="1dp"
+        android:outlineSpotShadowColor="@android:color/transparent"
         android:id="@+id/tab_layout"
+        android:outlineAmbientShadowColor="@android:color/transparent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="400dp"
-        android:backgroundTint="@android:color/transparent"
-        android:elevation="1dp"
-        android:outlineAmbientShadowColor="@android:color/transparent"
-        android:outlineSpotShadowColor="@android:color/transparent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/vp_on_boarding"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
         app:tabBackground="@drawable/tab_selector"
         app:tabGravity="center"
         app:tabIndicator="@null"
         app:tabIndicatorFullWidth="false"
         app:tabIndicatorHeight="0dp"
+        app:tabMinWidth="18dp"
+        app:tabPaddingBottom="0dp"
+        app:tabPaddingEnd="0dp"
+        app:tabPaddingStart="0dp"
+        app:tabPaddingTop="0dp"
         app:tabRippleColor="@null" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="350dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="575dp"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp_on_boarding"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-         />
+         >
+
+
+    </androidx.viewpager2.widget.ViewPager2>
 </androidx.constraintlayout.widget.ConstraintLayout>
